--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -55,5 +55,6 @@
      "C_Cpp.vcFormat.newLine.beforeOpenBrace.lambda": "sameLine",
      "C_Cpp.vcFormat.newLine.beforeOpenBrace.block": "sameLine",
      "C_Cpp.vcFormat.newLine.beforeOpenBrace.namespace": "sameLine",
-     "C_Cpp.vcFormat.newLine.beforeOpenBrace.type": "sameLine"
+     "C_Cpp.vcFormat.newLine.beforeOpenBrace.type": "sameLine",
+     "python.analysis.typeCheckingMode": "off"
 }
